Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Wed May 15 16:00:08 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Invert the "Is this system call valid" condition in strace.c
	  so it actually works.
	* Added parameters to strace for sys_signal().
	* Fixed the BSS zeroing in exec.c. This caused a lot of serious
	  problems to programs that assumed a zeroed BSS. "ash" was one
	  of them.

Mon May 13 22:47:47 BST 2002	Riley Williams <Riley@Williams.Name>

	* Standardised macros for debugging printk's - the function names
	  are now debug() for just a string, and debug[1-9]() where there
	  are parameters to be decoded. The ONLY exception is the memory
	  handlers which use debugmem() and debugmem[1-9] respectively.
	  All are skipped if DEBUG is not defined, and the memory macros
	  are also skipped if DEBUGMM is not defined.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Sun May 12 08:32:51 PDT 2002	Ken Martwick <kenm@efn.org>

	* Reverted removal of '#include <sys/sysmacros.h>' header line
	  from arch/i86/tools/build.c that stopped it from compiling
	  on Slackware systems.

Sun May  5 23:28:40 BST 2002	Riley Williams <Riley@Williams.Name>

	* Removed unused INODE_VERSION macros from include header files
	  as they conflicted with each other.

Sun May  5 23:11:33 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that fs/elksfs/*.c is clean as far as `splint -weak`
	  is concerned. This also eliminated a fair chunk of redundant
	  code in the form of static functions that are only called if
	  BLOAT_FS is defined. However, as this section is not included